examples/intlit.co
fun autotype()
  let _ = 1           // int (32)  int (64)
  let _ = -1          // int (32)  int (64)
  let _ = 2147483647  // int (32)  int (64)
  let _ = -2147483648 // int (32)  int (64)
  let _ = 4294967295  // uint (32) int (64)
  let _ = -2147483649 // i64 (32)  int (64)
  let _ = 4294967296  // u64 (32)  uint (64)

fun negative()
  let _ i8 = -1
  let _ u8 = -1  // == 0xff
  let _ i16 = -1
  let _ u16 = -1 // == 0xffff
  let _ i64 = -1
  let _ u32 = -1 // == 0xffffffff
  let _ i64 = -1
  let _ u64 = -1 // == 0xffffffffffffffff

fun int_limits()
  let _ i8 = 127
  let _ i8 = -128
  //let _ i8 = -129 // error: integer constant overflows type
  //let _ i8 = 128 // error: integer constant overflows type
  let _ u8 = 255
  let _ u8 = -128 // == 128
  //let _ u8 = 256 // error: integer constant overflows type
  //let _ u8 = -129 // error: integer constant overflows type

  let _ i16 = 32767
  let _ i16 = -32768
  //let _ i16 = -129 // error: integer constant overflows type
  //let _ i16 = 128 // error: integer constant overflows type
  let _ u16 = 65535
  let _ u16 = -32768 // == 32768
  //let _ u16 = 256 // error: integer constant overflows type
  //let _ u16 = -129 // error: integer constant overflows type

  let _ i32 = 2147483647
  let _ i32 = -2147483648
  //let _ i32 = -2147483649 // error: integer constant overflows type
  //let _ i32 = 2147483648 // error: integer constant overflows type
  let _ u32 = 4294967295
  let _ u32 = -2147483648 // == 2147483648
  //let _ u32 = 256 // error: integer constant overflows type
  //let _ u32 = -129 // error: integer constant overflows type

  let _ i64 = 9223372036854775807
  let _ i64 = -9223372036854775808
  //let _ i64 = -2147483649 // error: integer constant overflows type
  //let _ i64 = 2147483648 // error: integer constant overflows type
  let _ u64 = 18446744073709551615
  let _ u64 = -9223372036854775808 // == 9223372036854775808
  //let _ u64 = 256 // error: integer constant overflows type
  //let _ u64 = -129 // error: integer constant overflows type
